# laa-manage-a-providers-data

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  esbuild.config.js  package-lock.json  package.json  pyproject.toml  run_local.sh  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  cleanup-release.yml  dependency-review.yml  deploy-ephemeral.yml  deploy.yml  feature-branch.yml  main-branch.yml  static-analysis.yml  test.yml  trivy-cron.yml  trivy-image-scan.yml
app/: __init__.py  auth.py  auth_routes.py  constants.py  fields.py  filters.py  forms.py  models.py  types.py  utils.py  validators.py  views.py  widgets.py
app/auth/: __init__.py  auth.py  forms.py  utils.py  views.py
app/components/: tables.py  tag.py
app/config/: __init__.py  authentication.py  logging.py
app/example_form/: __init__.py  forms.py  routes.py  views.py
app/main/: __init__.py  constants.py  errors.py  forms.py  middleware.py  routes.py  table.py  table_builders.py  utils.py  views.py
app/pda/: api.py  errors.py  mock_api.py
app/services/: __init__.py  contract_managers.py
app/templates/: add-provider.html  bank-details.html  base.html  contract_managers.html  contracts.html  example-form.html  form.html  index.html  login.html  offices.html  providers.html  schedules.html  success.html  view-office.html  view-provider-advocate-barrister.html  view-provider-chambers.html  view-provider.html  (+1 more)
docs/: add-barrister-advocate.md
tests/: config.py  conftest.py
(+176 files in other folders)
