[project]
name = "manage-a-providers-data"
requires-python = ">= 3.13"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements-production.in"] }
optional-dependencies = { file = ["requirements-development.in"] }

[tool.ruff]
line-length = 120
indent-width = 4

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
live_server_scope = "function"
